<resources>
    <string name="app_name">No Dementia</string>
    <string name="gender_male">ชาย</string>
    <string name="gender_female">หญิง</string>
    <string name="education_0">โปรดเลือก</string>
    <string name="education_1">ไม่ได้เรียนหนังสือ</string>
    <string name="education_2">ประถมศึกษา</string>
    <string name="education_3">สูงกว่าประถมศึกษา</string>
    <string name="religion_thai">พุทธ</string>
    <string name="religion_islam">อิสลาม</string>
    <string name="job_0">โปรดเลือก</string>
    <string name="job_1">เกษตรกร</string>
    <string name="job_2">ประมง</string>
    <string name="job_3">ค้าขาย</string>
    <string name="job_4">แม่บ้าน</string>
    <string name="job_5">ข้าราชการบำนาญ</string>
    <string name="job_6">ไม่ประกอบอาชีพ</string>
    <string name="job_7">อื่นๆ</string>
    <string name="disease_0">ไม่มี</string>
    <string name="disease_1">เบาหวาน</string>
    <string name="disease_2">ความดันโลหิตสูง</string>
    <string name="disease_3">หัวใจ</string>
    <string name="disease_4">หลอดเลือดสมอง</string>
    <string name="disease_5">อื่นๆ</string>
    <string name="logout_title">ออกจากระบบ</string>
    <string name="logout_confirm">หากออกจากระบบข้อมูลทั้งหมดของท่านจะสูญหาย</string>
    <string name="logout_ok">ออกจากระบบ</string>
    <string name="logout_cancel">ยกเลิก</string>
    <string name="page1_title">ความหมายของภาวะสมองเสื่อม</string>
    <string name="page1_body">\t\tภาวะสมองเสื่อมเป็นกลุ่มอาการที่เป็นผลมาจากความผิดปกติในการทำงานของสมองในส่วนของเปลือกสมองหรือโรคของเนื้อสมอง โรคจะดำเนินไปช้าๆ และต่อเนื่อง ทำให้มีความบกพร่องของความจำทั้งระยะสั้นและระยะยาว มีความบกพร่องในด้านความคิดนามธรรม การตัดสินใจ การเรียนรู้ การสื่อสาร การใช้ภาษา การเคลื่อนไหวผิดปกติ ไม่สามารถแยกแยะวัตถุสิ่งของได้ มีการเปลี่ยนแปลงด้านอารมณ์ บุคลิกภาพและพฤติกรรม ซึ่งส่งผลรบกวนการทำงาน การทำกิจวัตรประจำวัน และการเข้าสังคม\n\n\n</string>
    <string name="page2_title">สาเหตุของภาวะสมองเสื่อม</string>
    <string name="page2_body">\t\t1. ความผิดปกติของเซลล์ประสาทในสมอง ภาวะสมองเสื่อม เกิดจากการเสื่อมสลายของเซลล์ประสาทในสมอง(neurodegenerative) เช่น โรคอัลไซเมอร์ โรคพาร์กินสัน เป็นต้น หรือเซลล์ประสาทในสมองถูกทำลายและอาจจะเกิดในสมองหลายบริเวณ โดยจะมีผลกระทบต่อบุคคลแตกต่างกัน ขึ้นอยู่กับตำแหน่งของสมองที่ผิดปกติ\n
\t\t2. ความผิดปกติจากส่วนอื่นๆ ของร่างกายที่ส่งผลให้สมองทำหน้าที่ผิดปกติ ได้แก่ ปัญหาหลอดเลือดสมอง ความแปรปรวนของระบบในร่างกาย เช่น โรคของต่อมไทรอยด์ โรคตับ โรคไต ภาวะขาดสารอาหาร โดยเฉพาะภาวะขาดวิตามินบี 1 ในผู้ดื่มสุราเป็นประจำ ภาวะขาดวิตามินบี 12 จากการรับประทานอาหารมังสวิรัตมานานกว่า 10 ปี หรือถูกตัดกระเพาะอาหารและลำไส้เล็กออกบางส่วน การติดเชื้อในสมอง เช่น ซิฟิลิส เอชไอวี สมองอักเสบ เยื่อบุสมองอักเสบ เป็นต้น การถูกกระทบกระแทกที่สมองบ่อยๆ เช่น อาชีพนักมวย เป็นต้น การมีส่วนประกอบของสมองเพิ่มขึ้น เช่น เนื้องอกในสมอง โพรงสมองขยายใหญ่เนื่องจากน้ำหล่อเลี้ยงสมองคั่ง (hydrocephalus) เป็นต้น การได้รับยาหรือสารพิษ เช่น ยานอนหลับ ยากล่อมประสาท ยาแก้แพ้รุนแรง (Chlorpheniramine:CPM) ยารักษาโรคจิต ยาต้านความเศร้ากลุ่มไตรไซคลิก (tricyclic) ยาคลายกล้ามเนื้อ  สารพิษ เช่น สารปรอท ตะกั่ว เป็นต้น\n\n\n</string>
    <string name="page3_title">ปัจจัยเสี่ยงของการเกิดภาวะสมองเสื่อม</string>
    <string name="page3_headline">แบ่งได้ 2 ลักษณะ ดังนี้</string>
    <string name="page3_body">1.ปัจจัยเสี่ยงที่ปรับเปลี่ยนไม่ได้มีดังนี้\n
\t\t1.1 อายุ ความเสี่ยงของการเกิดภาวะสมองเสื่อมจะเพิ่มขึ้นตามอายุ โดยเฉพาะหลังอายุ 65 ปี แต่ภาวะสมองเสื่อมก็มิใช่ส่วนหนึ่งของการสูงอายุปกติ และอาจจะเกิดกับคนอายุน้อยได้เช่นกัน\n
\t\t1.2 ประวัติครอบครัว หากมีบุคคลในครอบครัวมีภาวะสมองเสื่อม บุคคลนั้นจะมีความเสี่ยงที่จะเกิดภาวะสมองเสื่อมมากขึ้น\n
\t\t1.3 การผ่าเหล่าของยีนเฉพาะ เช่น คนที่เป็นดาวน์ซินโดรม เป็นต้น ผู้มีความผิดปกติของยีนจึงต้องรับการตรวจคัดกรอง เพื่อจะได้ทราบความผิดปกติตั้งแต่ระยะแรกทำให้มีโอกาสร่วมตัดสินใจเลือกวิธีการรักษา และเตรียมความพร้อมที่จะเผชิญกับผลกระทบที่จะเกิดขึ้นในอนาคต\n
2.ปัจจัยเสี่ยงที่ปรับเปลี่ยนได้มี 12 ประการ ดังนี้\n
\t\t2.1 หลอดเลือดแดงในสมองแข็ง (atherosclerosis) เนื่องจากหลอดเลือดที่ไปเลี้ยงสมองหนาตัว แข็งตัว หรือมีการตีบตัวผิดปกติ ส่งผลให้ปริมาณเลือดที่ไปเลี้ยงสมองลดลงถ้าลดลงมากจนไม่เพียงพอต่อการใช้งานก็จะทำให้เนื้อสมองตาย ส่งผลให้เกิดภาวะสมองเสื่อมจากหลอดเลือด (vascular dementia) และยังพบความสัมพันธ์ระหว่างหลอดเลือดแดงในสมองแข็งกับโรคอัลไซเมอร์อีกด้วย\n
\t\t2.2 ระดับความดันโลหิตทั้งสูงและต่ำ จะเพิ่มความเสี่ยงของการเกิดภาวะสมองเสื่อมได้ การที่มีความดันโลหิตสูงในวัยกลางคนจะเพิ่มความเสี่ยงต่อการเกิดภาวะสมองเสื่อมในวัยสูงอายุ แต่ถ้าได้รับการรักษาแล้ว โอกาสเสี่ยงจะลดลงจาก 4.3 เท่าเป็น 1.9 เท่า เมื่อเปรียบเทียบกับผู้ที่ความดันโลหิตปกติ โดยความดันโลหิตสูงมีผลกระทบทั้งทางตรงและทางอ้อมต่อการลดลงของความสามารถของสมอง ทางตรงคือ ผู้ที่มีความดันโลหิตสูงจะมีการลดลงของปริมาตรและน้ำหนักสมองในแต่ละช่วงความดันโลหิตซิส-โตลิกที่เพิ่มขึ้นทุก 10 มม.ปรอท ความสามารถของสมองจะลดลงร้อยละ 7 ส่วนภาวะความดันโลหิตต่ำนั้น มีการศึกษาพบว่าผู้ที่อายุเกิน 75 ปี ที่มีความดันโลหิตต่ำมีอุบัติการณ์การเกิดภาวะสมองเสื่อมมากขึ้น\n
\t\t2.3 ภาวะไขมันในเลือดสูง การที่มีระดับโคเลสเตอรอล (cholesterol) ในเลือดสูงจะมีไขมันเลว หรือไลโปโปรตีนความหนาแน่นต่ำ (LDL cholesterol) สูงด้วย จึงเพิ่มโอกาสเกิดภาวะสมองเสื่อมจากหลอดเลือดและอัลไซเมอร์ ปัจจุบันยังมีการศึกษาวิจัยเกี่ยวกับเรื่องนี้อยู่\n
\t\t2.4 โรคเบาหวาน (Diabetes)ผู้ที่เป็นโรคเบาหวานเพิ่มโอกาสเสี่ยงที่จะเกิดภาวะสมองเสื่อมจากหลอดเลือดและอัลไซเมอร์โดยพบว่าอุบัติการณ์ของภาวะสมองเสื่อมสูงขึ้น 2 เท่าในผู้ป่วยโรคเบาหวาน\n
\t\t2.5 ฮอร์โมนเพศหญิงทดแทน (high estrogen and progesterone levels)ในปัจจุบันพบว่า ผู้หญิงที่ได้รับฮอร์โมนเอสโตรเจนและโปรเจสเตอโรนทดแทนหลังหมดประจำเดือนทำให้เสี่ยงต่อการเกิดโรคมะเร็งเต้านม โรคหลอดเลือดหัวใจตีบ โรคหลอดเลือดสมองตีบ และการอุดตันในหลอดเลือดดำ โดยผู้ป่วยที่ได้รับฮอร์โมนเพศหญิงทดแทนชนิดรวมเกิดภาวะสมองเสื่อมเพิ่มขึ้นประมาณ 2 เท่า\n
\t\t2.6 ระดับโฮโมซีสตีนในเลือดสูง (hyperhomocysteinemia) ถ้าโฮโมซีสตีนซึ่งเป็นกรดอะมิโนที่ร่างกายสร้างขึ้นมาเองสูง จะเพิ่มความเสี่ยงของการเกิดภาวะสมองเสื่อมจากหลอดเลือดเนื่องจากโฮโมซีสตีนเป็นพิษต่อเซลล์สมองและทำลายหลอดเลือดสมอง โฮโมซีสตีนในเลือดจะเพิ่มขึ้นผิดปกติหากร่างกายขาดวิตามินบี 6 วิตามินบี12 และกรดโฟลิก\n
\t\t2.7 ความอ้วน (Obesity)น้ำหนักที่เกินในช่วงวัยกลางคนจะเพิ่มความเสี่ยงที่จะเกิดภาวะสมองเสื่อมเมื่ออายุมากขึ้น ดัชนีมวลกายที่เหมาะสมที่สุดสำหรับการป้องกันการเกิดภาวะสมองเสื่อมในอนาคตคือ 20-22.5 กิโลกรัม/ตารางเมตร ถ้าดัชนีมวลกายมากกว่า 25 กิโลกรัม/ตารางเมตร จะเสี่ยงต่อการเกิดภาวะสมองเสื่อม โดยความเสี่ยงจะเพิ่มขึ้นตามดัชนีมวลกาย\n
\t\t2.8 การขาดการออกกำลังกาย มีการศึกษาพบว่า ผู้ที่ออกกำลังกายอย่างน้อย 3 ครั้งต่อสัปดาห์ขึ้นไปในวัยกลางคนช่วยลดความเสี่ยงต่อการเกิดภาวะสมองเสื่อมและโรคอัลไซเมอร์ได้ร้อยละ 52 และ 62 ตามลำดับ เมื่อเข้าสู่วัยสูงอายุ\n
\t\t2.9การสูบบุหรี่ (Smoking) การสูบบุหรี่เพิ่มอุบัติการณ์การเกิดโรคหลอดเลือดสมองถึง 2 เท่า และเพิ่มความเสี่ยงต่อการเกิดภาวะสมองเสื่อม 2.28 เท่า การงดสูบบุหรี่ตั้งแต่ 5 ปีขึ้นไปจะลดปัจจัยเสี่ยงของการเกิดโรคหลอดเลือดสมองลงได้เท่าคนที่ไม่เคยสูบบุหรี่ คือลดลงร้อยละ 50\n
\t\t2.10 การดื่มแอลกอฮอล์ การดื่มแอลกอฮอล์มากทำให้มีความเสี่ยงจะเกิดโรคสมองเสื่อมมากขึ้น กล่าวคือ การดื่มแอลกอฮอล์จะทำให้ร่างกายไม่สามารถนำวิตามินบี 1 มาใช้ได้ และนอกจากนี้ยังรบกวนการดูดซึมวิตามินบี 1 เข้าสู่ร่างกายอีกด้วย จะทำให้สมองมีการสูญเสียการทำงานบางอย่าง\n
\t\t2.11 สารอาหาร การรับประทานอาหารที่มีไขมันสูงหรือมีไขมันอิ่มตัวและโคเลสเตอรอลสูงจะเพิ่มความเสี่ยงต่อการเกิดภาวะสมองเสื่อม\n
\t\t2.12 การได้รับอุบัติเหตุที่ศีรษะ มีการศึกษาทางระบาดวิทยาหลายรายงานที่พบว่า ผู้ป่วยที่เป็นโรคอัลไซเมอร์และมีภาวะสมองเสื่อมจากสาเหตุอื่นๆ มีประวัติเคยได้รับอุบัติเหตุที่ศีรษะมากกว่าคนที่ไม่มีภาวะสมองเสื่อม\n\n\n
</string>
    <string name="page4_title">อาการของภาวะสมองเสื่อม</string>
    <string name="page4_headline">ภาวะสมองเสื่อมแบ่งเป็น 3 ระยะดังนี้</string>
    <string name="link_8_thai_1"><u>https://www.youtube.com/watch?v=cnpi56lScU4</u></string>
    <string name="link_8_thai_2"><u>https://www.youtube.com/watch?v=wOJuq5oWKqs</u></string>
    <string name="link_8_thai_3"><u>https://www.youtube.com/watch?v=ljvmx2t5Qfs</u></string>
    <string name="link_8_thai_4"><u>https://www.youtube.com/watch?v=ZFCgkpLeGts</u></string>
    <string name="link_8_thai_5"><u>https://www.youtube.com/watch?v=Pg42HYNdKwE</u></string>
    <string name="link_8_thai_6"><u>https://www.youtube.com/watch?v=QjtqpsYDPbc</u></string>
    <string name="link_8_thai_7"><u>https://www.youtube.com/watch?v=yz6TSShCCBI</u></string>
    <string name="link_8_thai_8"><u>https://www.youtube.com/watch?v=pUPtLPT7vu8</u></string>
    <string name="link_8_thai_9"><u>https://www.youtube.com/watch?v=Yq_BYeOoQ20</u></string>
    <string name="link_8_thai_10"><u>https://www.youtube.com/watch?v=i8M4FBPdc8o</u></string>
    <string name="link_8_thai_11"><u>https://www.youtube.com/watch?v=6iSLWbJXQFs</u></string>
    <string name="link_8_thai_12"><u>https://www.youtube.com/watch?v=oJKkCVfEdzA</u></string>
    <string name="link_8_thai_13"><u>https://www.youtube.com/watch?v=hXwvi0ecwTQ</u></string>
    <string name="link_8_thai_14"><u>https://www.youtube.com/watch?v=xS7DQb3pt6E</u></string>
    <string name="link_8_thai_15"><u>https://www.youtube.com/watch?v=nD3TApXn71I\n\n\n</u></string>
    <string name="link_9_islam_1"><u>https://www.youtube.com/watch?v=pDp44HfqEv8</u></string>
    <string name="link_9_islam_2"><u>https://www.youtube.com/watch?v=hI9jB4siCXw</u></string>
    <string name="link_9_islam_3"><u>https://www.youtube.com/watch?v=ihXsosziwRY</u></string>
    <string name="link_9_islam_4"><u>https://www.youtube.com/watch?v=nkmHVDV6DgY</u></string>
    <string name="link_9_islam_5"><u>https://www.youtube.com/watch?v=12qUxPBIFoY</u></string>
    <string name="link_9_islam_6"><u>https://www.youtube.com/watch?v=iw0Ckg93yTs</u></string>
    <string name="link_9_islam_7"><u>https://www.youtube.com/watch?v=TrnD4OqjbZU</u></string>
    <string name="link_9_islam_8"><u>https://www.youtube.com/watch?v=Vqfy4ScRXFQ</u></string>
    <string name="link_9_islam_9"><u>https://www.youtube.com/watch?v=LyvmNdP0lVk</u></string>
    <string name="link_9_islam_10"><u>https://www.youtube.com/watch?v=1OMD_LSELAM</u></string>
    <string name="link_9_islam_11"><u>https://www.youtube.com/watch?v=y7kTchpUu84</u></string>
    <string name="link_9_islam_12"><u>https://www.youtube.com/watch?v=V-kZMHoXnLA</u></string>
    <string name="link_9_islam_13"><u>https://www.youtube.com/watch?v=Lz39qpNg41w</u></string>
    <string name="link_9_islam_14"><u>https://www.youtube.com/watch?v=z01Wxbtai94</u></string>
    <string name="link_9_islam_15"><u>https://www.youtube.com/watch?v=eVD8VVr5c_w</u></string>
    <string name="link_9_islam_16"><u>https://www.youtube.com/watch?v=rCUh3uT75PQ</u></string>
    <string name="link_9_islam_17"><u>https://www.youtube.com/watch?v=YbEJ4pH7F6w</u></string>
    <string name="link_9_islam_18"><u>https://www.youtube.com/watch?v=u9VOJf7Dev8</u></string>
    <string name="link_9_islam_19"><u>https://www.youtube.com/watch?v=lF6zowKOXFA\n\n\n</u></string>
</resources>