<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">
            <TextView
                android:id="@+id/page_title"
                android:textColor="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="38sp"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:fontFamily="@font/kwang"
                style="@style/TextAppearance.AppCompat.Headline"/>
        </FrameLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/frame">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">
                <TextView
                    android:text="บรรยายธรรม"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:id="@+id/link_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_9_islam_1"
                    android:layout_marginBottom="6dp"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#0000FF" />
                <TextView
                    android:id="@+id/link_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_9_islam_2"
                    android:layout_marginBottom="6dp"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#0000FF" />
                <TextView
                    android:id="@+id/link_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_9_islam_3"
                    android:layout_marginBottom="6dp"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#0000FF" />
                <TextView
                    android:id="@+id/link_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_9_islam_4"
                    android:layout_marginBottom="6dp"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#0000FF" />
                <TextView
                    android:id="@+id/link_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_9_islam_5"
                    android:layout_marginBottom="6dp"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#0000FF" />
                <TextView
                    android:id="@+id/link_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_9_islam_6"
                    android:layout_marginBottom="6dp"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#0000FF" />
                <TextView
                    android:id="@+id/link_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_9_islam_7"
                    android:layout_marginBottom="6dp"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#0000FF" />
                <TextView
                    android:text="อนาชีด"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="16dp"/>
                <TextView
                    android:id="@+id/link_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_9_islam_8"
                    android:layout_marginBottom="6dp"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#0000FF" />
                <TextView
                    android:id="@+id/link_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_9_islam_9"
                    android:layout_marginBottom="6dp"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#0000FF" />
                <TextView
                    android:id="@+id/link_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_9_islam_10"
                    android:layout_marginBottom="6dp"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#0000FF" />
                <TextView
                    android:id="@+id/link_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_9_islam_11"
                    android:layout_marginBottom="6dp"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#0000FF" />
                <TextView
                    android:id="@+id/link_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_9_islam_12"
                    android:layout_marginBottom="6dp"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#0000FF" />
                <TextView
                    android:id="@+id/link_13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_9_islam_13"
                    android:layout_marginBottom="6dp"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#0000FF" />
                <TextView
                    android:id="@+id/link_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_9_islam_14"
                    android:layout_marginBottom="6dp"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#0000FF" />
                <TextView
                    android:id="@+id/link_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_9_islam_15"
                    android:layout_marginBottom="6dp"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#0000FF" />
                <TextView
                    android:id="@+id/link_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_9_islam_16"
                    android:layout_marginBottom="6dp"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#0000FF" />
                <TextView
                    android:id="@+id/link_17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_9_islam_17"
                    android:layout_marginBottom="6dp"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#0000FF" />
                <TextView
                    android:id="@+id/link_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_9_islam_18"
                    android:layout_marginBottom="6dp"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#0000FF" />
                <TextView
                    android:id="@+id/link_19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_9_islam_19"
                    android:layout_marginBottom="6dp"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#0000FF" />
            </LinearLayout>
        </ScrollView>
        <ImageView
            android:id="@+id/backImg"
            android:src="@drawable/ic_back"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:layout_marginLeft="16dp"/>
        <ImageView
            android:id="@+id/forwardImg"
            android:src="@drawable/ic_forward"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:layout_marginRight="16dp"/>
    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>